tdf#127935 Make double click expand/collapse entry in option tree

Change-Id: I5b9d065ebe4a612ebe9658feb9ff71c504de7982